Actualizar package.json para definir el punto de entrada, agregar soporte para módulos y actualizar dependencias a la última versión

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
 	"name": "ape-scrap-cron",
 	"version": "1.0.0",
-	"private": true,
-	"scripts": {},
-	"devDependencies": {},
+	"main": "src/index.js",
+	"type": "module",
+	"scripts": {
+		"start": "node src/index.js"
+	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.48.1",
-		"cheerio": "^1.0.0"
+		"@supabase/supabase-js": "latest",
+		"cheerio": "latest",
+		"dotenv": "latest"
 	}
 }
