Actualizar dependencias en package.json y package-lock.json; refactorizar función handleScheduled para mejorar la legibilidad y manejo de errores

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"start": "node src/index.js"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "latest",
-		"cheerio": "latest",
-		"dotenv": "latest"
+		"@supabase/supabase-js": "2.48.1",
+		"cheerio": "1.0.0",
+		"dotenv": "16.4.7",
+		"node-cron": "3.0.3"
 	}
 }
